--- a/app/src/main/res/layout/main_menu_fragment.xml
+++ b/app/src/main/res/layout/main_menu_fragment.xml
@@ -186,7 +186,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/permissionRationale"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:checkable="true"
