--- a/app/src/main/res/layout/sidebar.xml
+++ b/app/src/main/res/layout/sidebar.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:paddingHorizontal="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:showIn="@layout/game_fragment">
+    tools:showIn="@layout/fragment_game">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
