Fixed settings background not changing on dark theme

--- a/app/src/main/res/layout/fragment_settings_list.xml
+++ b/app/src/main/res/layout/fragment_settings_list.xml
@@ -15,6 +15,7 @@
     app:contentPaddingRight="16dp"
     app:contentPaddingBottom="12dp"
     app:contentPaddingTop="12dp"
+    app:cardBackgroundColor="?colorPrimary"
     android:layout_marginHorizontal="24dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
