--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="grey_900_transparent">#66212121</color>
     <color name="grey_50_transparent">#66FAFAFA</color>
 
+    <color name="blue_grey_900">#263238</color>
     <color name="grey_900">#212121</color>
     <color name="grey_800">#424242</color>
     <color name="grey_700">#616161</color>
