--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
         <action
             android:id="@+id/action_mainMenuFragment_to_accountFragment"
             app:destination="@id/accountFragment" />
+        <action
+            android:id="@+id/action_mainMenuFragment_to_joinLobbyFragment"
+            app:destination="@id/joinLobbyFragment" />
     </fragment>
     <fragment
         android:id="@+id/gameFragment"
@@ -113,4 +116,55 @@
         android:id="@+id/accountFragment"
         android:name="com.example.tetrisapp.ui.fragment.AccountFragment"
         android:label="AccountFragment" />
+    <fragment
+        android:id="@+id/joinLobbyFragment"
+        android:name="com.example.tetrisapp.ui.fragment.JoinLobbyFragment"
+        android:label="JoinLobbyFragment" >
+        <action
+            android:id="@+id/action_joinLobbyFragment_to_lobbyFragment"
+            app:destination="@id/lobbyFragment"
+            app:popUpTo="@id/lobbyFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_joinLobbyFragment_to_accountFragment"
+            app:destination="@id/accountFragment"
+            app:popUpTo="@id/accountFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_joinLobbyFragment_to_createLobbyFragment"
+            app:destination="@id/createLobbyFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/lobbyFragment"
+        android:name="com.example.tetrisapp.ui.fragment.LobbyFragment"
+        android:label="LobbyFragment" >
+        <argument
+            android:name="inviteCode"
+            app:argType="string"
+            android:defaultValue="" />
+        <action
+            android:id="@+id/action_lobbyFragment_to_mainMenuFragment"
+            app:destination="@id/mainMenuFragment"
+            app:popUpTo="@id/mainMenuFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/createLobbyFragment"
+        android:name="com.example.tetrisapp.ui.fragment.CreateLobbyFragment"
+        android:label="CreateLobbyFragment" >
+        <action
+            android:id="@+id/action_createLobbyFragment_to_lobbyFragment"
+            app:destination="@id/lobbyFragment"
+            app:popUpTo="@id/lobbyFragment"
+            app:popUpToInclusive="true" >
+            <argument
+                android:name="inviteCode"
+                app:argType="string"
+                android:defaultValue="000000" />
+        </action>
+        <action
+            android:id="@+id/action_createLobbyFragment_to_accountFragment"
+            app:destination="@id/accountFragment"
+            app:popUpTo="@id/accountFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
