--- a/app/src/main/res/layout/sidebar_multiplayer.xml
+++ b/app/src/main/res/layout/sidebar_multiplayer.xml
@@ -1,26 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="80dp"
     android:layout_height="match_parent"
     android:paddingHorizontal="4dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:showIn="@layout/fragment_game">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/tvNameCompetitor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="@string/username"
-            android:fontFamily="@font/fira_sans_bold"
-            android:textSize="16sp"
-            android:textColor="?colorOnPrimary"
-            android:includeFontPadding="false"
-            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/tvScoreCompetitor"
@@ -51,6 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:backgroundColor="?colorPrimary"
+            app:gridLineWidth="1"
             app:layout_constraintDimensionRatio="H,1:2" />
 
         <TextView
@@ -227,7 +216,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:constraint_referenced_ids="tvNameCompetitor,tvScoreCompetitor,scoreCompetitor,gameViewCompetitor,tvNext,cvNext1,cvNext2,tvHold,cvHold,tvScore,score,tvLines,lines,tvLevel,level,tvCombo,combo"
+            app:constraint_referenced_ids="tvScoreCompetitor,scoreCompetitor,gameViewCompetitor,tvNext,cvNext1,cvNext2,tvHold,cvHold,tvScore,score,tvLines,lines,tvLevel,level,tvCombo,combo"
             app:flow_verticalGap="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
