--- a/app/src/main/res/layout/fragment_create_lobby.xml
+++ b/app/src/main/res/layout/fragment_create_lobby.xml
@@ -36,12 +36,12 @@
         android:id="@+id/tvSettings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/fira_sans_bold"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/fira_sans_bold"
         android:text="@string/lobby_settings"
         android:textColor="?colorOnPrimary"
         android:textSize="20sp"
-        app:layout_constraintStart_toEndOf="@+id/btnBack"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
 
@@ -49,16 +49,17 @@
         android:id="@+id/linearLayout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="@+id/tvSettings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSettings">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:fontFamily="@font/fira_sans"
             android:text="@string/countdown"
             android:textColor="?colorOnPrimary"
@@ -68,7 +69,7 @@
             android:id="@+id/countdownSlider"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:stepSize="1.0"
             android:value="3.0"
             android:valueFrom="0.0"
@@ -83,13 +84,14 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        app:layout_constraintStart_toStartOf="@+id/tvSettings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:fontFamily="@font/fira_sans"
             android:text="@string/player_limit"
             android:textColor="?colorOnPrimary"
@@ -99,7 +101,7 @@
             android:id="@+id/playerLimitSlider"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:stepSize="1.0"
             android:value="2.0"
             android:valueFrom="2.0"
@@ -113,11 +115,12 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/fira_sans"
+        android:paddingEnd="8dp"
         android:text="@string/enable_pause"
         android:textColor="?colorOnPrimary"
         android:textSize="18sp"
-        android:paddingEnd="8dp"
-        app:layout_constraintStart_toStartOf="@+id/tvSettings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <androidx.appcompat.widget.AppCompatButton
