--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="blue_700">#1976D2</color>
 
     <color name="grey_900_transparent">#66212121</color>
+    <color name="grey_300_transparent">#66E0E0E0</color>
     <color name="grey_50_transparent">#66FAFAFA</color>
 
     <color name="blue_grey_900">#263238</color>
@@ -24,4 +25,5 @@
     <color name="grey_300">#E0E0E0</color>
     <color name="grey_200">#EEEEEE</color>
     <color name="grey_100">#F5F5F5</color>
+
 </resources>
