--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,6 +5,7 @@
         <item name="colorPrimary">@color/grey_900</item>
         <item name="colorPrimaryVariant">@color/blue_grey_900</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryInverse">@color/grey_500</item>
 
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/grey_300</item>
@@ -16,6 +17,9 @@
 
         <item name="colorGameButton">@color/grey_50_transparent</item>
         <item name="colorOnGameButton">@color/black</item>
+
+        <item name="colorButtonDisabled">@color/grey_900_transparent</item>
+        <item name="colorSecondaryButtonDisabled">@color/grey_300_transparent</item>
 
         <item name="android:textColorSecondary">@color/grey_700</item>
         <item name="android:colorBackground">?colorPrimary</item>
