--- a/app/src/main/res/layout/fragment_lobby.xml
+++ b/app/src/main/res/layout/fragment_lobby.xml
@@ -5,31 +5,46 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageButton
+        android:id="@+id/btnBack"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:background="@drawable/background_button"
+        android:contentDescription="@string/desc_back"
+        android:padding="8dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_round_arrow_back_24"
+        app:layout_constraintBottom_toBottomOf="@+id/tvLobbyTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvLobbyTitle"
+        app:tint="?colorOnPrimary" />
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvLobbyTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/fira_sans_bold"
-        android:text="Nickname’s Lobby"
+        tools:text="Nickname’s Lobby"
         android:textColor="?colorOnPrimary"
-        android:textSize="24sp"
+        android:textSize="28sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/players"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat_medium"
-        android:text="Players:"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/fira_sans_bold"
+        android:text="@string/players"
         android:textColor="?colorOnPrimary"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tvLobbyTitle" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
@@ -42,7 +57,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tvInviteCode"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/players"
         tools:context=".ui.fragment.LobbyFragment"
         tools:listitem="@layout/fragment_user" />
 
@@ -92,8 +107,9 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/inviteCode"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:padding="6dp"
             android:fontFamily="@font/montserrat_medium"
             android:textAlignment="center"
@@ -102,13 +118,13 @@
             tools:text="#AB6NAJ" />
 
         <ImageButton
-            android:id="@+id/btnCopyInviteCode"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
-            android:background="?colorPrimary"
+            android:id="@+id/btnActionMenu"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@null"
             app:tint="?colorOnPrimary"
             android:layout_marginStart="8dp"
-            android:src="@drawable/ic_round_content_copy_24" />
+            android:src="@drawable/ic_round_more_vert_24" />
     </LinearLayout>
 
 
